--- a/src/main/webapp/bc/libs/themes/default/attach.css
+++ b/src/main/webapp/bc/libs/themes/default/attach.css
@@ -9,7 +9,8 @@
 .attachs {
 	
 }
-.attachs table{
+
+.attachs table {
 	table-layout: fixed;
 }
 
@@ -20,9 +21,8 @@
 
 /** 添加附加的input控件的容器 */
 .attachs .header span.uploadFile {
-	position:relative;
+	position: relative;
 	text-decoration: underline;
-	cursor: pointer;
 }
 
 /** 添加附加的input控件 */
@@ -32,9 +32,10 @@
 	top: 0;
 	width: 5em;
 	height: 1.5em;
-	filter: alpha(opacity = 0);
+	filter: alpha(opacity =     10);
 	opacity: 0;
 	cursor: pointer;
+	-moz-margin-start: -165px; /*Firefox的input:file宽度无法控制的处理*/
 }
 
 /** 每个附加的总容器 */
@@ -48,29 +49,31 @@
 	vertical-align: middle;
 }
 
-.attachs .header .summary, .attachs .attach .subject {
+.attachs .header .summary,.attachs .attach .subject {
 	font-weight: bold;
 }
 
-.attachs .header span.uploadFile, .attachs .header .operation, .attachs .attach .operation {
+.attachs .header span.uploadFile,.attachs .header .operation,.attachs .attach .operation
+	{
 	margin: 6px;
 	color: #2A5DB0;
 }
 
 .attachs .attach td.operations {
 	vertical-align: middle;
-	padding-right:6px;
+	padding-right: 6px;
 }
 
-.attachs .attach .progressbar.ui-progressbar
-,.attachs .attach .progressbar .ui-progressbar-value{
-	border-radius:0;
-	margin:0;
+.attachs .attach .progressbar.ui-progressbar,.attachs .attach .progressbar .ui-progressbar-value
+	{
+	border-radius: 0;
+	margin: 0;
 }
-.attachs .attach .progressbar{
-	width:15em;
-	height:1em;
-	margin-left:6px;
+
+.attachs .attach .progressbar {
+	width: 15em;
+	height: 1em;
+	margin-left: 6px;
 }
 
 /**
@@ -88,6 +91,15 @@ span.file-icon {
 	height: 32px;
 }
 
+span.file-icon.txt {
+	background-position: -128px 0;
+}
+
+span.file-icon.pdf {
+	background-position: -96px 0;
+}
+
+/**Office文档*/
 span.file-icon.doc {
 	background-position: -32px 0;
 }
@@ -100,6 +112,73 @@ span.file-icon.ppt {
 	background-position: -96px 0;
 }
 
-span.file-icon.txt {
-	background-position: -128px 0;
+span.file-icon.docx {
+	background-position: -32px 0;
+}
+
+span.file-icon.xlsx {
+	background-position: -64px 0;
+}
+
+span.file-icon.pptx {
+	background-position: -96px 0;
+}
+
+/**图片*/
+span.file-icon.png {
+	background-position: -0px -0px;
+}
+
+span.file-icon.jpg {
+	background-position: -0px -0px;
+}
+
+span.file-icon.jpeg {
+	background-position: -0px -0px;
+}
+
+span.file-icon.gif {
+	background-position: -0px -0px;
+}
+
+span.file-icon.tif {
+	background-position: -0px -0px;
+}
+
+span.file-icon.tiff {
+	background-position: -0px -0px;
+}
+
+span.file-icon.ico {
+	background-position: -0px -0px;
+}
+
+/**音乐*/
+span.file-icon.mp3 {
+	background-position: -0px -0px;
+}
+
+span.file-icon.mid {
+	background-position: -0px -0px;
+}
+
+span.file-icon.wma {
+	background-position: -0px -0px;
+}
+
+/**视频*/
+span.file-icon.avi {
+	background-position: -0px -0px;
+}
+
+span.file-icon.wmv {
+	background-position: -0px -0px;
+}
+
+span.file-icon.mkv {
+	background-position: -0px -0px;
+}
+
+span.file-icon.wmv {
+	background-position: -0px -0px;
 }
