--- a/src/main/webapp/bc/libs/themes/default/core.css
+++ b/src/main/webapp/bc/libs/themes/default/core.css
@@ -54,7 +54,10 @@ body {
 /**修改对话框*/
 .bc-ui-dialog {padding: 0;}
 .bc-ui-dialog .ui-widget-header {border-width: 0;}
-.bc-ui-dialog .ui-widget-header.ui-corner-all {border-bottom-right-radius: 0;border-bottom-left-radius: 0;}
+.bc-ui-dialog .ui-widget-header.ui-corner-all {
+	border-top-right-radius: 0;border-top-left-radius: 0;
+	border-bottom-right-radius: 0;border-bottom-left-radius: 0;
+}
 .bc-ui-dialog .ui-dialog-content {
 	padding: 0;
 	/*margin: 0 8px 8px 8px;*/
