--- a/src/main/webapp/bc/libs/themes/default/attach.css
+++ b/src/main/webapp/bc/libs/themes/default/attach.css
@@ -20,9 +20,13 @@
 }
 
 /** 添加附加的input控件的容器 */
-.attachs .header span.uploadFile {
+.attachs .header td.uploadFile {
 	position: relative;
 	text-decoration: underline;
+	color: #2A5DB0;
+}
+.attachs .header td {
+	vertical-align: middle;
 }
 
 /** 添加附加的input控件 */
@@ -44,9 +48,14 @@
 }
 
 /** 附加的图标 */
-.attachs .attach .icon {
-	padding-right: 4px;
+.attachs .attach .icon,.attachs .header .summary {
+	padding-right: 6px;
 	vertical-align: middle;
+}
+
+/** 附加的图标 */
+.attachs .attach td.size {
+	min-width: 4em;
 }
 
 .attachs .header .summary,.attachs .attach .subject {
@@ -92,93 +101,125 @@ span.file-icon {
 }
 
 span.file-icon.txt {
-	background-position: -128px 0;
+	background-position: -32px 0;
 }
 
 span.file-icon.pdf {
-	background-position: -96px 0;
+	background-position: -64px 0;
 }
 
 /**Office文档*/
 span.file-icon.doc {
-	background-position: -32px 0;
-}
-
-span.file-icon.xls {
-	background-position: -64px 0;
-}
-
-span.file-icon.ppt {
 	background-position: -96px 0;
 }
 
 span.file-icon.docx {
-	background-position: -32px 0;
+	background-position: -128px 0;
+}
+
+span.file-icon.xls {
+	background-position: -160px 0;
 }
 
 span.file-icon.xlsx {
-	background-position: -64px 0;
+	background-position: -192px 0;
+}
+
+span.file-icon.ppt {
+	background-position: -224px 0;
 }
 
 span.file-icon.pptx {
-	background-position: -96px 0;
+	background-position: -256px 0;
+}
+
+/**其他文档*/
+span.file-icon.bat {
+	background-position: 0 -32px;
+}
+span.file-icon.rar {
+	background-position: -32px -32px;
+}
+span.file-icon.zip {
+	background-position: -64px -32px;
+}
+span.file-icon.7z {
+	background-position: -96px -32px;
+}
+span.file-icon.gz {
+	background-position: -128px -32px;
+}
+span.file-icon.tar {
+	background-position: -160px -32px;
 }
 
 /**图片*/
+span.file-icon.pic {
+	background-position: 0 -64px;
+}
+
+span.file-icon.psd {
+	background-position: -32px -64px;
+}
+
 span.file-icon.png {
-	background-position: -0px -0px;
+	background-position: -64px -64px;
 }
 
 span.file-icon.jpg {
-	background-position: -0px -0px;
+	background-position: -96px -64px;
 }
 
 span.file-icon.jpeg {
-	background-position: -0px -0px;
+	background-position: -96px -64px;
 }
 
 span.file-icon.gif {
-	background-position: -0px -0px;
+	background-position: -128px -64px;
 }
 
 span.file-icon.tif {
-	background-position: -0px -0px;
+	background-position: -160px -64px;
 }
 
 span.file-icon.tiff {
-	background-position: -0px -0px;
+	background-position: -160px -64px;
 }
 
 span.file-icon.ico {
-	background-position: -0px -0px;
+	background-position: -192px -64px;
 }
 
 /**音乐*/
 span.file-icon.mp3 {
-	background-position: -0px -0px;
+	background-position: -0px -96px;
 }
 
 span.file-icon.mid {
-	background-position: -0px -0px;
+	background-position: -32px -96px;
 }
 
 span.file-icon.wma {
-	background-position: -0px -0px;
+	background-position: -64px -96px;
 }
 
 /**视频*/
 span.file-icon.avi {
-	background-position: -0px -0px;
+	background-position: -0px -128px;
 }
 
 span.file-icon.wmv {
-	background-position: -0px -0px;
+	background-position: -32px -128px;
+}
+
+span.file-icon.mpg {
+	background-position: -64px -128px;
+}
+
+span.file-icon.mpeg {
+	background-position: -64px -128px;
 }
 
 span.file-icon.mkv {
-	background-position: -0px -0px;
-}
-
-span.file-icon.wmv {
-	background-position: -0px -0px;
+	background-position: 0 0;
 }
